# ai-interview-coach

./: .gitignore  README.md  manifest.json
server/: database.py  launcher.bat  launcher.vbs  main.py  pyproject.toml  requirements.txt
src/: config.example.js
src/background/: background.js
src/content/: content-script.js  meet-captions.js  sidebar.css  sidebar.html  sidebar.js
src/popup/: popup.css  popup.html  popup.js
src/utils/: cloud-db.js  constants.js  storage.js
