[project]
name = "ai-interview-coach"
version = "0.1.0"
description = "AI Interview Coach"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["fastapi","uvicorn","psycopg2-binary","pgvector","ollama","python-multipart","pydantic","PyPDF2","python-docx","python-pptx","google-generativeai","python-dotenv"]
